# agi-gpt-plugins

./: README.md  planner.py  planner_audit_testing.py  planner_environmental_impact_assessment.py  planner_prioritization.py  planner_update.py  planner_version_control.py  pyproject.toml  requirements.txt
src/agi_gpt_plugins/api_tools/: README.md  __init__.py  api_tools.py  test_api_tools.py
src/agi_gpt_plugins/astro/: __init__.py
src/agi_gpt_plugins/baidu_search/: __init__.py  test_auto_gpt_baidu_plugin.py
src/agi_gpt_plugins/bing_search/: README.md  __init__.py  test_auto_gpt_bing.py
src/agi_gpt_plugins/bluesky/: README.md  __init__.py
src/agi_gpt_plugins/email/: README.md  __init__.py
src/agi_gpt_plugins/news_search/: README.md  __init__.py  test_auto_gpt_news_search.py
src/agi_gpt_plugins/planner/: README.md  __init__.py  object_parameters.py  planner.py  planner_filter.py  planner_memory.py  planner_report.py  planner_task_manager.py  planner_visualization.py  qualitative_parameters.py  quantitative_parameters.py
src/agi_gpt_plugins/random_values/: README.md  __init__.py  random_values.py
src/agi_gpt_plugins/scenex/: README.md  __init__.py
src/agi_gpt_plugins/telegram/: README.md  __init__.py  telegram_chat.py
src/agi_gpt_plugins/twitter/: README.md  __init__.py  twitter.py
src/agi_gpt_plugins/wikipedia_search/: README.md  __init__.py
src/agi_gpt_plugins/wolframalpha_search/: README.md  __init__.py  test_wolframalpha_search.py  wolframalpha_search.py
src/alpha_plugins/api_tools/: README.md  __init__.py  test_api_tools.py
(+78 files in other folders)
